test/invalid/MissingIs/MissingIs.plume
/**
 * @author Robin Burgess 36815
 */
 class ThisIsnt extends Object
	field yellow : String